[gd_scene load_steps=12 format=2]

[ext_resource path="res://DroidSans.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://InfoCenter.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 14.0
content_margin_right = 14.0
content_margin_top = 14.0
content_margin_bottom = 14.0
bg_color = Color( 0, 0, 0, 1 )
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.909804, 0.619608, 0.168627, 1 )
corner_radius_top_right = 8
corner_detail = 4

[sub_resource type="DynamicFont" id=2]
size = 36
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 1 )
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.419608, 0.411765, 0.403922, 1 )

[sub_resource type="StyleBoxFlat" id=4]
content_margin_left = 8.0
content_margin_top = 2.0
bg_color = Color( 0.0745098, 0.223529, 0.407843, 1 )
border_width_right = 4
border_width_bottom = 2
border_color = Color( 0.239216, 0.235294, 0.231373, 1 )
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="DynamicFont" id=5]
size = 26
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.47451, 0.913725, 0.647059, 1 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0.0823529, 0.552941, 0.4, 1 )
border_blend = true
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="DynamicFont" id=7]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=9]
size = 30
font_data = ExtResource( 2 )

[node name="Grid" type="GridContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 0
custom_constants/hseparation = 0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 800.0
margin_bottom = 316.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0

[node name="NameBox" type="Label" parent="VBoxContainer"]
margin_right = 800.0
margin_bottom = 117.0
size_flags_vertical = 1
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0.67451, 0.223529, 1 )
text = "test
asdm,asd"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
margin_top = 117.0
margin_right = 800.0
margin_bottom = 316.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 3 )

[node name="Map" type="Polygon2D" parent="VBoxContainer/PanelContainer"]

[node name="imgbox" type="TextureRect" parent="VBoxContainer/PanelContainer"]
margin_right = 796.0
margin_bottom = 195.0
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
margin_top = 316.0
margin_right = 800.0
margin_bottom = 632.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0

[node name="FactBox" type="Label" parent="VBoxContainer2"]
margin_right = 800.0
margin_bottom = 316.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "Welcome! This district is known for"
autowrap = true

[node name="MarginContainer" type="VBoxContainer" parent="."]
margin_top = 632.0
margin_right = 800.0
margin_bottom = 800.0
custom_constants/separation = 0

[node name="Neighbours" type="Button" parent="MarginContainer"]
margin_right = 800.0
margin_bottom = 42.0
size_flags_horizontal = 3
size_flags_vertical = 4
custom_styles/pressed = SubResource( 6 )
custom_fonts/font = SubResource( 7 )
custom_colors/font_color_pressed = Color( 0.0235294, 0.423529, 0.0235294, 1 )
toggle_mode = true
text = "Neighbours"

[node name="history" type="Button" parent="MarginContainer"]
margin_top = 42.0
margin_right = 800.0
margin_bottom = 84.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 7 )
text = "History"

[node name="clue" type="Button" parent="MarginContainer"]
visible = false
margin_top = 106.0
margin_right = 1024.0
margin_bottom = 143.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/normal = SubResource( 8 )
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 1, 0.8, 0.0666667, 1 )
text = "Need Another Clue?"

[node name="Muni" type="Button" parent="MarginContainer"]
margin_top = 84.0
margin_right = 800.0
margin_bottom = 126.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 9 )
text = "Cities"

[node name="Back" type="Button" parent="MarginContainer"]
margin_top = 126.0
margin_right = 800.0
margin_bottom = 168.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 7 )
text = "Main Menu"

[connection signal="pressed" from="MarginContainer/Neighbours" to="." method="_on_Neighbours_pressed"]
[connection signal="toggled" from="MarginContainer/Neighbours" to="." method="_on_Neighbours_toggled"]
[connection signal="pressed" from="MarginContainer/history" to="." method="_on_history_pressed"]
[connection signal="pressed" from="MarginContainer/clue" to="." method="_on_clue_pressed"]
[connection signal="pressed" from="MarginContainer/Muni" to="." method="_on_muni1_pressed"]
[connection signal="pressed" from="MarginContainer/Back" to="." method="_on_Back_pressed"]
